fixup! fixup! scale up datapicker on mobile

--- a/shkc/static/tass.css
+++ b/shkc/static/tass.css
@@ -693,8 +693,11 @@ input#startDate {
 		height: 38px !important;
 		top: -5px !important;
 		position: relative;
-		transform: scale(1.2);
-		}
+		/* transform: scale(1.2); */
+	}
+    .m-account-search .ipt {
+        width: 260px;
+    }
     .ui-mask-msg div {
 		background: #fbfbfb url(../images/loading.gif) no-repeat 5px 17px;
 		position: fixed;
